changing colour of water to use eye dropper

--- a/main.css
+++ b/main.css
@@ -14,12 +14,12 @@
 body {
     margin: 0;
     padding: 0;
-    /* background-color: var(--grape) !important; */
-    background:
+    background-color: #A8838A !important;
+    /* background:
     -webkit-linear-gradient(
         var(--grape),
         var(--deepgrape)
-    ) !important;
+    ) !important; */
     font-family: 'Sarabun'!important;
     color: var(--white) !important;
 }
@@ -83,23 +83,12 @@ img {
     font-size: 1em;
   }
 
-  .down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-  }
-  .arrow {
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 5px;
-    margin-left: 5%;
-  }
-
+/* Ocean */
   .rectangle {
     height: 125px;
     opacity: 0.90;
     width: 100%;
-    background-color: rgb(139,122,146,0.8);
+    background-color: rgb(55,81,150,0.65);
     position: absolute;
     top: 100%;
     transform: translate(0%, -100%);
