changing colours again

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #A8838A !important;
+    background-color: #876E8D !important;
     /* background:
     -webkit-linear-gradient(
         var(--grape),
