--- a/main.css
+++ b/main.css
@@ -14,14 +14,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #876E8D !important;
+    background-color: var(--grape) !important;
     /* background:
     -webkit-linear-gradient(
         var(--grape),
         var(--deepgrape)
     ) !important; */
     font-family: 'Sarabun'!important;
-    color: var(--white) !important;
+    color: white !important;
 }
 
 /* Navigation and Footer Bar */
@@ -63,8 +63,8 @@ li > a:hover:after{
 }
 
 .logo {
-    width: 120px;
-    height: 60px;
+    width: 100px;
+    height: 50px;
 }
 
 /* Splash Page */
@@ -236,6 +236,10 @@ position: relative;
       padding-bottom: 0.5em;
     }
     
+    .featured-projects h3 {
+      float: right;
+      font-size: 1em;
+    }
     .card {
       /* Add shadows to create the "card" effect */
       box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -262,4 +266,29 @@ position: relative;
     .card p {
       color: var(--cherry);
       font-weight: 600;
+    }
+
+    mark {
+      display: inline-block;
+      line-height: 0.25em;
+      padding-bottom: 0.5em;
+      color: white;
+      background-color: var(--watermelon) !important;
+    }
+
+    /* Focusses */
+    .core-focusses {
+      margin-top: 5%;
+    }
+
+    .page-footer {
+      background-color: var(--deepgrape);
+      margin: 0 !important;
+      padding: 0 !important;
+
+    }
+
+    footer {
+      margin: 0 !important;
+      padding: 0 !important;
     }
