--- a/main.css
+++ b/main.css
@@ -251,6 +251,7 @@ position: relative;
       transition: 0.3s;
       margin-left: 1%;
       border: none !important;
+      
     }
     
     /* On mouse-over, add a deeper shadow */
@@ -263,14 +264,21 @@ position: relative;
       padding: 2px 16px;
     }
 
-    .card h5 {
+    .featured-projects .card h5 {
       color: black;
       font-size: 1em;
       font-weight: 600;
     }
-    .card p {
+    .featured-projects .card p {
       color: var(--cherry);
       font-weight: 600;
+    }
+
+    .core-focusses .card p {
+    
+        color: var(--cherry);
+        
+      
     }
 /* 
     mark {
@@ -298,10 +306,10 @@ position: relative;
       width: 75%;
       margin: 0 auto;
     }
-    .inner-1 {
-      width: 65%;
+    /* .inner-1 {
+      width: 75%;
       margin: 0 auto;
-    }
+    } */
 
 
 .hello {
@@ -326,6 +334,10 @@ position: relative;
 
 .highlight {
   background: linear-gradient(180deg, rgba(255,255,255,0) 65%, var(--watermelon) 65%);
+}
+
+.highlight-orange {
+  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, #FFD0AE 65%);
 }
 
 .featured-projects h2, .featured-projects h4, .check-this-out h2 {
@@ -367,6 +379,11 @@ position: relative;
   margin-top: 2%;
   border: none !important;
   border-radius: 0 !important;
+ 
+}
+
+.check-this-out .row {
+  text-align: center;
 }
 
 .check-this-out .card h5 {
@@ -393,5 +410,12 @@ position: relative;
 }
 
 .page-footer .row {
-  padding-top: 0 !important;
+  width: 100%; /* self explanatory */
+  
+}
+
+.focus-image {
+  position: relative;
+  top: 50%; 
+  transform: translateY(-50%);
 }
