--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
     --lemon: #F7AF7E;
     --tangerine: #F7987F;
     --white: #FFFFFF;
-    --grape: #8E85A6;
+    --grape: #99809d;
     --deepgrape: #564C65;
 }
 
@@ -212,6 +212,8 @@ position: relative;
         color: white;
         padding: 15px;
         text-align: center;
+        border-radius: 10px;
+        box-shadow: 2px 2px grey;
         /* text-decoration: none; */
         display: inline-block;
         font-size: 0.75em;
@@ -267,6 +269,7 @@ position: relative;
     .featured-projects .card h5 {
       color: black;
       font-size: 1em;
+      font-family: Roboto;
       font-weight: 600;
     }
     .featured-projects .card p {
@@ -290,9 +293,7 @@ position: relative;
     } */
 
     /* Focusses */
-    .core-focusses {
-      margin-top: 5%;
-    }
+ 
 
     .page-footer {
       background-color: var(--deepgrape);
@@ -320,11 +321,12 @@ position: relative;
 }
 
 .sunset-description {
-  margin-top: 5%;
+  /* margin-top: 5%; */
 }
 
 .sunset-description p {
-  padding-bottom: 5%;
+  /* padding-bottom: 5%; */
+  margin: 0 !important;
 }
 
 
@@ -333,7 +335,7 @@ position: relative;
 }
 
 .highlight {
-  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, var(--watermelon) 65%);
+  background: linear-gradient(180deg, rgba(255,255,255,0) 65%, rgba(234,87,104,0.85) 65%);
 }
 
 .highlight-orange {
@@ -348,12 +350,13 @@ position: relative;
   background-color: var(--cherry) !important;
   margin-top: 2%;
   border: none !important;
-  border-radius: 0 !important;
+  border-radius: 10px;
   
 }
 
 .core-focusses .card .card-pink {
-  background-color: var(--watermelon) !important;
+  background-color: var(--cherry) !important;
+  border-radius: 10px;
 
 }
 
@@ -378,7 +381,7 @@ position: relative;
   background-color: var(--deepgrape) !important;
   margin-top: 2%;
   border: none !important;
-  border-radius: 0 !important;
+  border-radius: 10px;
  
 }
 
@@ -418,5 +421,15 @@ position: relative;
   position: relative;
   top: 50%; 
   transform: translateY(-50%);
+}
+
+.wave-container {
+  position: relative;
+  /* background: #09F; */
+  color: #FFF;
+  text-align: center;
+  overflow: hidden;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
