--- a/main.css
+++ b/main.css
@@ -282,6 +282,7 @@ li > a:hover:after{
 .featured-projects {
   margin-top: 5%;
   margin-bottom: 7%;
+
 }
 
 mark {
@@ -362,21 +363,24 @@ mark {
   transform: translateY(-50%);
 }
 
-.core-focusses .card {
-  background-color: var(--cherry) !important;
-  margin-top: 2%;
-  border: none !important;
-  border-radius: 10px;
+.nav-pills a {
+  color: var(--cherry);
+  border: 5px;
+  font-weight: 600;
 }
 
-.core-focusses .card .card-pink {
+a.active.nav-link{
   background-color: var(--cherry) !important;
-  border-radius: 10px;
 }
 
-.core-focusses a, .core-focusses a:hover {
+
+.tab-content p {
+  font-size: 0.75em;
+}
+
+/* .core-focusses a, .core-focusses a:hover {
   color: white;
-}
+} */
 
 .core-focusses .collapse {
   background-color: var(--blushpink);
@@ -434,29 +438,27 @@ mark {
 
 /* Footer  */
 .page-footer {
-  background-color: var(--peach);
+  background-color: var(--grape);
   margin: 0 !important;
-  padding: 0 !important;
 }
 
 .page-footer .row {
   width: 100%; 
+}
+
+.socials {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  justify-content: center;
+}
+
+.socials img {
+  width: 1.75em;
+  margin: 0 0.5em;
 }
  /* Conclusion */
  .conclusion {
    padding-bottom: 3em;
  }
 
-.nav-pills a {
-  color: var(--cherry);
-  font-weight: 600;
-}
 
-a.active.nav-link{
-  background-color: var(--cherry) !important;
-}
-
-
-.tab-content p {
-  font-size: 0.75em;
-}
