--- a/main.css
+++ b/main.css
@@ -52,6 +52,11 @@ p {
   margin: 0 auto;
 }
 
+.inner-1 {
+  width: 85%;
+  margin: 0 auto;
+}
+
 @media only screen and (max-width: 600px) {
   .inner {
     width: 85%;
@@ -260,7 +265,7 @@ li > a:hover:after{
 }
 
 
-.resume, .more-about-me, .all-projects {
+.resume-btn, .more-about-me-btn, .all-projects-btn {
   background-color: var(--peach);
   color: white;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
@@ -268,13 +273,13 @@ li > a:hover:after{
   
 }
 
-.resume:hover, .more-about-me:hover, .all-projects:hover {
+.resume-btn:hover, .more-about-me-btn:hover, .all-projects-btn:hover {
   box-shadow: 0 4px 10px 0 rgba(0,0,0,0.3);
   color: white;
 }
 
 
-.all-projects {
+.all-projects-btn {
   float: right;
 }
 
@@ -299,7 +304,8 @@ mark {
   float: right;
   font-size: 1em;
 }
-.featured-projects .card {
+
+.featured-projects .card, .all-work .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   margin-left: 1%;
@@ -307,11 +313,11 @@ mark {
   border-radius: 0 !important;
 }
 
-.featured-projects .card-img-top {
+.featured-projects .card-img-top, .all-work .card-img-top {
   border-radius: 0 !important;
 }
 
-.featured-projects .card:hover {
+.featured-projects .card:hover, .all-work .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
 
@@ -319,28 +325,28 @@ mark {
   padding: 2px 16px;
 }
 
-.featured-projects .card h6 {
+.featured-projects .card h6, .all-work .card h6 {
   color: var(--cherry);
   font-size: 0.6em;
   font-weight: 600;
   font-family: 'Sarabun';
 }
 
-.featured-projects .card h5 {
+.featured-projects .card h5, .all-work .card h5 {
   color: black;
   font-size: 1em;
   font-family: 'Sarabun';
   font-weight: 600;
 }
 
-.featured-projects .card p {
+.featured-projects .card p, .all-work .card p {
   color: black;
   font-size: 0.6em;
   font-weight: 600;
  
 }
 
-.featured-projects .card .card-link {
+.featured-projects .card .card-link, .all-work .card .card-link {
   color: black;
   font-size: 0.5em;
   font-weight: 600;
@@ -395,6 +401,9 @@ a.active.nav-link{
   padding-top: 2%;
 }
 
+.core-focusses .nav {
+  padding-top: 3em;
+}
 /* Check This Out  */
 .check-this-out .card {
   background-color: white; !important;
@@ -461,4 +470,29 @@ a.active.nav-link{
    padding-bottom: 3em;
  }
 
+ /* ------------------PROJECTS--------------------------- */
+.work-intro {
+  padding-top: 6em;
+}
 
+ .about-me, .all-work {
+  margin-top: 3em;
+  background-color: var(--blushpink);
+}
+
+
+.all-work h3 {
+  color: var(--cherry);
+  padding-top: 2em;
+  padding-bottom: 1em;
+  text-align: center;
+
+}
+ .work-intro a {
+   color: var(--white);
+ }
+
+ .work-intro a:hover {
+   color: white;
+   text-decoration: none;
+ }
