bug fixes and about page reformat

--- a/main.css
+++ b/main.css
@@ -295,8 +295,16 @@ li > a:hover:after{
 /* Projects */
 .featured-projects {
   margin-top: 5%;
-  margin-bottom: 12%;
+  margin-bottom: 7%;
 
+}
+
+@media only screen and (max-width: 600px) {
+  .featured-projects {
+    margin-top: 5%;
+    margin-bottom: 15%;
+  
+  }
 }
 
 mark {
@@ -483,7 +491,7 @@ a.active.nav-link{
 }
 
  .all-work {
-  margin-top: 3em;
+  margin-top: 4em;
   background: var(--blushpink);
  }
 
@@ -550,13 +558,21 @@ h4 {
 /* About  */
 .about-me h2 {
   margin-top: 3em;
-  padding-bottom: 1em;
+  padding-bottom: 0.5em;
+}
+
+.about-intro-blurb {
+  /* line-height: 2; */
 }
 
 .about-me img {
-  margin-top: 2em;
-  margin-bottom: 2em;
-  max-width: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+ 
 }
 
 .mission {
@@ -567,4 +583,10 @@ h4 {
 .mission h3 {
   margin: 0 !important;
   line-height: 1.5;
+}
+
+/* Blog */
+.blog-intro {
+  margin-top: 6em;
+  margin-bottom: 6em;
 }
