--- a/main.css
+++ b/main.css
@@ -568,13 +568,14 @@ h4 {
   padding-bottom: 0.5em;
 }
 
-.about-intro-blurb {
-  /* line-height: 2; */
+.about-intro-blurb li {
+  padding-bottom: 1em;
+  font-family: 'Roboto';
+  font-size: 0.9em;
 }
-
 .about-me img {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 1em;
+  margin-bottom: 2em;
   width: 85%;
   margin-left: auto;
   margin-right: auto;
