--- a/main.css
+++ b/main.css
@@ -569,25 +569,25 @@ h4 {
 /* About  */
 .about-me h2 {
   margin-top: 3em;
-  padding-bottom: 0.5em;
 }
 
 .about-intro-blurb li {
-  padding-bottom: 1em;
+  padding-top: 1em;
   font-family: 'Roboto';
   font-size: 0.9em;
 }
 .about-me img {
-  margin-top: 1em;
-  margin-bottom: 2em;
   width: 85%;
   margin-left: auto;
   margin-right: auto;
   display: block;
- 
 }
 
-.mission {
+.my-story {
+  padding-top: 1em;
+}
+
+.mission, .about-intro-photo {
   background-color: var(--blushpink);
   color: var(--cherry);
 }
